# dj_backup

./: .gitignore  .gitignore.txt  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  gitignore.txt  requirements.txt  requirments.txt  setup.cfg  setup.py
dj_backup/: __init__.py  admin.py  config.py  urls.py  views.py
dj_backup/core/: logging.py  mixins.py  tasks.py
dj_backup/core/backup/: file.py
dj_backup/core/storages/: __init__.py  base.py  drop_box.py  ftp_server.py  local.py  sftp_server.py  telegram_bot.py
dj_backup/core/task/: schedule.py
dj_backup/core/utils/: static.py
dj_backup/management/commands/: run-backup.py
dj_backup/migrations/: 0002_djstorage_checked.py  0004_djstoragepickle.py  0004_rename_djbackuploglevel_djbackuploglevelnotif.py  0006_djbackuplogemail.py  0007_djbackuploglevel_delete_djbackuplogemail_and_more.py  0008_alter_djbackuploglevel_options_and_more.py
dj_backup/models/: __init__.py  notification.py
dj_backup/templates/dj_backup/: index.html
dj_backup/tests/core/: storage.py
djbackup.egg-info/: PKG-INFO  SOURCES.txt
docker/: Dockerfile  start.sh
docker/src/config/: settings.py
requirements/: common.txt
src/config/: settings.py  urls.py
src/dj_backup/: admin.py  apps.py  config.py  forms.py  models.py  notification.py  signals.py  urls.py  views.py
src/dj_backup/core/: logging.py  mixins.py  storage.py  storages.py  task.py  tasks.py  triggers.py  utils.py
src/dj_backup/migrations/: 0001_initial.py  0002_djbackupsecure.py  0002_remove_djfile_name.py  0003_djfile_name.py  (+26 more)
(+80 files in other folders)
