[metadata]
name = djbackup
version = 2.0.0
description = dj_backup is an installable module for Django that is used for backup purposes.
long_description = file: README.md
long_description_content_type = text/markdown
author = FZl47
author_email = fzl8747@gmail.com
license = MIT
url = https://github.com/FZl47/dj_backup

[options]
packages = find:
